blog/infra/k8s/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - name: comment
          image: mayurlashkari/micro_service:comment
          resources:
            limits:
              cpu : "1"
              memory: 512Mi               
            requests:
              memory: 256Mi
              cpu: "0.2"
      
---

apiVersion: v1
kind: Service
metadata:
   name: comment-cluseterip-srv
spec:
   selector:
     app: comment
   type: ClusterIP
   ports:
     - name: comment
       protocol: TCP
       port: 4001
       targetPort: 4001
