blog/infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: posts.com
      http:
        - paths: /posts
          backend:
            service:
              name: posts-cluseterip-srv
              port:
                number: 4000
